--- a/cart.service
+++ b/cart.service
@@ -3,7 +3,7 @@ Description = Cart Service
 [Service]
 User=roboshop
 // highlight-start
-Environment=REDIS_HOST=redis.devsecopspractice..site
+Environment=REDIS_HOST=redis.devsecopspractice.site
 Environment=CATALOGUE_HOST=catalogue.devsecopspractice.site
 Environment=CATALOGUE_PORT=8080
 // highlight-end
